--- a/styles/style.css
+++ b/styles/style.css
@@ -128,11 +128,107 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, blockquote {
     padding: 40px 20px;
 }
 
+.content-section__subtitle {
+    margin-bottom: 32px;
+    font-family: 'EB Garamomd', serif;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1.15;
+}
+
+.content-section__introduction {
+    margin: 0 0 32px;
+    font-size: 20px;
+    line-height: 1.35;
+}
+
+.content-section__list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 0 0 0 16px;
+    font-size: 16px;
+    line-height: 1.35;
+}
+
+.content-section__list-accent {
+    font-weight: 700;
+}
+
 .how-to {
     padding: 40px 20px 60px;
 }
 
-.footer {
+.cards-list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    list-style-type: none;
+}
+
+.card {
+    border-radius: 30px;
     padding: 20px;
 }
 
+.card_theme-dark {
+    color: #f5f5f5;
+    background-color: #343434;
+}
+
+.card_theme-bright {
+    color: #141414;
+    background-color: #fee42a;
+}
+
+.card__author {
+    
+}
+
+.card__author-photo {
+    display: block;
+    width: 100px;
+    border-radius: 50%;
+}
+
+.card__author-name {
+
+}
+
+.card__content {
+
+}
+
+.card__title {
+    margin: 8px auto;
+    font-family: 'EB Garamond';
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 1.35;
+}
+
+.card__text {
+
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #fee42a;
+    padding: 20px;
+}
+
+.footer__links {
+    display: flex;
+    gap: 16px;
+    list-style: none;
+}
+
+.footer__links a {
+    color: #f5f5f5;
+    font-size: 14px;
+    line-height: 1.25;
+    text-decoration: none;
+}
